libwx-perl (0.82-1) UNRELEASED; urgency=low

  * New upstream release.
  * Drop patch 01_fix_whatis_entries.patch, now included upstreams.
  * debian/copyright: shorten upstream download location.
  * debian/watch: extended regexp for matching upstream releases.

 -- gregor herrmann <gregor+debian@comodo.priv.at>  Thu, 27 Mar 2008 21:21:10 +0100

libwx-perl (0.81-2) unstable; urgency=low

  * add ${perl:Depends} to Depends. Thanks, Niko.
  * Switch to new format for copyright file.

 -- Roberto C. Sanchez <roberto@connexer.com>  Sun, 27 Jan 2008 14:58:33 -0500

libwx-perl (0.81-1) unstable; urgency=low

  * New upstream release.

 -- Roberto C. Sanchez <roberto@connexer.com>  Thu, 24 Jan 2008 18:22:55 -0500

libwx-perl (0.80-1) unstable; urgency=low

  * Initial release (Closes: #397533)

 -- Roberto C. Sanchez <roberto@connexer.com>  Sat, 19 Jan 2008 13:59:49 -0500